--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/startButton"
             android:background="@color/colorButton"
-            android:onClick="startButton" android:textSize="24sp"
+            android:onClick="setFingerPrint" android:textSize="24sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.667"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.722"
             android:layout_marginStart="48dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.067"/>
@@ -30,7 +30,7 @@
             android:onClick="startSubmit" android:textSize="24sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.667"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.722"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.811"/>
     <TextView
@@ -55,53 +55,125 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.488"
-            app:layout_constraintVertical_bias="0.199"/>
+            app:layout_constraintVertical_bias="0.065"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
-            android:id="@+id/fret1"
+            android:id="@+id/guitarString1"
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.488" app:layout_constraintTop_toTopOf="@+id/view"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
-            android:id="@+id/fret2"
+            android:id="@+id/guitarString2"
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintTop_toBottomOf="@+id/fret1"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/fret3"
+            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintTop_toBottomOf="@+id/guitarString1"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guitarString3"
             app:layout_constraintVertical_bias="0.556"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
-            android:id="@+id/fret3"
+            android:id="@+id/guitarString3"
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintBottom_toTopOf="@+id/fret4"
+            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintBottom_toTopOf="@+id/guitarString4"
             android:layout_marginBottom="48dp"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
-            android:id="@+id/fret4"
+            android:id="@+id/guitarString4"
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintBottom_toTopOf="@+id/fret5"
+            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintBottom_toTopOf="@+id/guitarString5"
             android:layout_marginBottom="48dp"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
-            android:id="@+id/fret5"
+            android:id="@+id/guitarString5"
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.488" android:layout_marginBottom="40dp"
-            app:layout_constraintBottom_toTopOf="@+id/fret6"/>
+            app:layout_constraintBottom_toTopOf="@+id/guitarString6"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
-            android:id="@+id/fret6"
+            android:id="@+id/guitarString6"
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.488" app:layout_constraintBottom_toBottomOf="@+id/view"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fret"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:typeface="monospace"
+            android:textSize="50sp"
+            android:textColor="@android:color/white" android:id="@+id/fret1"
+            app:layout_constraintHorizontal_bias="0.078" app:layout_constraintVertical_bias="0.537"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fret"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:typeface="monospace"
+            android:textSize="50sp"
+            android:textColor="@android:color/white" android:id="@+id/fret2"
+            app:layout_constraintHorizontal_bias="0.244" app:layout_constraintVertical_bias="0.537"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fret"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:typeface="monospace"
+            android:textSize="50sp"
+            android:textColor="@android:color/white" android:id="@+id/fret3"
+            app:layout_constraintHorizontal_bias="0.404" app:layout_constraintVertical_bias="0.537"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fret"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:typeface="monospace"
+            android:textSize="50sp"
+            android:textColor="@android:color/white" android:id="@+id/fret4"
+            app:layout_constraintHorizontal_bias="0.577" app:layout_constraintVertical_bias="0.537"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fret"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:typeface="monospace"
+            android:textSize="50sp"
+            android:textColor="@android:color/white" android:id="@+id/fret5"
+            app:layout_constraintHorizontal_bias="0.742" app:layout_constraintVertical_bias="0.537"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fret"
+            android:typeface="monospace"
+            android:textSize="50sp"
+            android:textColor="@android:color/white" android:id="@+id/fret6"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.923"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.538"/>
 
 </android.support.constraint.ConstraintLayout>
