--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,8 +111,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorAccent"
             android:typeface="monospace"
-            android:textSize="50sp"
+            android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret1"
             app:layout_constraintHorizontal_bias="0.078" app:layout_constraintVertical_bias="0.537"/>
     <TextView
@@ -123,8 +124,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorAccent"
             android:typeface="monospace"
-            android:textSize="50sp"
+            android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret2"
             app:layout_constraintHorizontal_bias="0.244" app:layout_constraintVertical_bias="0.537"/>
     <TextView
@@ -135,8 +137,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorAccent"
             android:typeface="monospace"
-            android:textSize="50sp"
+            android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret3"
             app:layout_constraintHorizontal_bias="0.404" app:layout_constraintVertical_bias="0.537"/>
     <TextView
@@ -147,8 +150,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorAccent"
             android:typeface="monospace"
-            android:textSize="50sp"
+            android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret4"
             app:layout_constraintHorizontal_bias="0.577" app:layout_constraintVertical_bias="0.537"/>
     <TextView
@@ -159,16 +163,18 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorAccent"
             android:typeface="monospace"
-            android:textSize="50sp"
+            android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret5"
             app:layout_constraintHorizontal_bias="0.742" app:layout_constraintVertical_bias="0.537"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fret"
+            android:background="@color/colorAccent"
             android:typeface="monospace"
-            android:textSize="50sp"
+            android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret6"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
