--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,20 +17,20 @@
             android:onClick="setFingerPrint" android:textSize="24sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.722"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.782"
             android:layout_marginStart="48dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.067"/>
+            app:layout_constraintHorizontal_bias="0.074"/>
     <Button
             android:text="@string/submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/submitButton"
             android:background="@color/colorButton"
-            android:onClick="startSubmit" android:textSize="24sp"
+            android:onClick="submitAnswer" android:textSize="24sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.722"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.782"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.811"/>
     <TextView
@@ -40,12 +40,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/textViewScore"
+            android:textColor="@android:color/black"
             android:background="@color/colorButton"
-            app:layout_constraintVertical_bias="0.837"
+            app:layout_constraintVertical_bias="0.891"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textStyle="bold"
-            android:textAlignment="center"/>
+            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.506"
+            android:fontFamily="sans-serif-medium"/>
     <View
             android:layout_width="350dp"
             android:layout_height="258dp"
@@ -71,7 +73,7 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.488" app:layout_constraintTop_toBottomOf="@+id/guitarString1"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guitarString3"
-            app:layout_constraintVertical_bias="0.556"/>
+            app:layout_constraintVertical_bias="0.55"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
@@ -79,7 +81,7 @@
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.488" app:layout_constraintBottom_toTopOf="@+id/guitarString4"
-            android:layout_marginBottom="48dp"/>
+            android:layout_marginBottom="45dp"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
@@ -87,14 +89,14 @@
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.488" app:layout_constraintBottom_toTopOf="@+id/guitarString5"
-            android:layout_marginBottom="48dp"/>
+            android:layout_marginBottom="45dp"/>
     <View
             android:layout_width="350dp"
             android:layout_height="5dp"
             android:id="@+id/guitarString5"
             android:background="@color/colorBlack" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.488" android:layout_marginBottom="40dp"
+            app:layout_constraintHorizontal_bias="0.488" android:layout_marginBottom="45dp"
             app:layout_constraintBottom_toTopOf="@+id/guitarString6"/>
     <View
             android:layout_width="350dp"
@@ -115,7 +117,7 @@
             android:typeface="monospace"
             android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret1"
-            app:layout_constraintHorizontal_bias="0.078" app:layout_constraintVertical_bias="0.537"/>
+            app:layout_constraintHorizontal_bias="0.077" app:layout_constraintVertical_bias="0.401"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -128,7 +130,7 @@
             android:typeface="monospace"
             android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret2"
-            app:layout_constraintHorizontal_bias="0.244" app:layout_constraintVertical_bias="0.537"/>
+            app:layout_constraintHorizontal_bias="0.248" app:layout_constraintVertical_bias="0.401"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -141,7 +143,7 @@
             android:typeface="monospace"
             android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret3"
-            app:layout_constraintHorizontal_bias="0.404" app:layout_constraintVertical_bias="0.537"/>
+            app:layout_constraintHorizontal_bias="0.403" app:layout_constraintVertical_bias="0.401"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -154,7 +156,7 @@
             android:typeface="monospace"
             android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret4"
-            app:layout_constraintHorizontal_bias="0.577" app:layout_constraintVertical_bias="0.537"/>
+            app:layout_constraintHorizontal_bias="0.594" app:layout_constraintVertical_bias="0.401"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -167,7 +169,7 @@
             android:typeface="monospace"
             android:textSize="40sp"
             android:textColor="@android:color/white" android:id="@+id/fret5"
-            app:layout_constraintHorizontal_bias="0.742" app:layout_constraintVertical_bias="0.537"/>
+            app:layout_constraintHorizontal_bias="0.749" app:layout_constraintVertical_bias="0.401"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -178,24 +180,24 @@
             android:textColor="@android:color/white" android:id="@+id/fret6"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.923"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.938"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.538"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.399"/>
     <LinearLayout
             android:layout_width="50dp"
             android:layout_height="70dp"
             android:orientation="horizontal"
+            android:background="@android:color/white"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintVertical_bias="0.987">
-
-        <NumberPicker
-                android:id="@+id/numberPicker"
-                android:layout_width="116dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.023"
+            app:layout_constraintVertical_bias="0.589">
+            <NumberPicker
+                    android:id="@+id/numberPicker"
+                    android:layout_width="116dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
     </LinearLayout>
 
 
