--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,16 +188,102 @@
             android:layout_height="70dp"
             android:orientation="horizontal"
             android:background="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.023"
-            app:layout_constraintVertical_bias="0.589">
-            <NumberPicker
-                    android:id="@+id/numberPicker"
-                    android:layout_width="116dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.589"
+            android:id="@+id/linearLayout5" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent">
+        <NumberPicker
+                android:id="@+id/submitPicker1"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+    </LinearLayout>
+    <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.589"
+            android:id="@+id/linearLayout" app:layout_constraintStart_toEndOf="@+id/linearLayout5"
+            android:layout_marginStart="16dp">
+        <NumberPicker
+                android:id="@+id/submitPicker2"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+    </LinearLayout>
+    <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.589"
+            android:id="@+id/linearLayout2" app:layout_constraintStart_toEndOf="@+id/linearLayout"
+            android:layout_marginStart="16dp">
+        <NumberPicker
+                android:id="@+id/submitPicker3"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+    </LinearLayout>
+    <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.589"
+            android:id="@+id/linearLayout4" app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+            android:layout_marginStart="18dp">
+        <NumberPicker
+                android:id="@+id/submitPicker4"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+    </LinearLayout>
+    <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.589"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout4" android:layout_marginStart="18dp"
+            android:id="@+id/linearLayout6">
+        <NumberPicker
+                android:id="@+id/submitPicker5"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+    </LinearLayout>
+    <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:background="@android:color/white"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.589" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout3"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout6" android:layout_marginStart="18dp">
+        <NumberPicker
+                android:id="@+id/submitPicker6"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
     </LinearLayout>
 
 
