Show whether submits are correct or not when pushing SUBMIT
If the submits are correct, the frames of TextViews will be green.
Red if in correct.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,7 +163,7 @@
         android:id="@+id/fret1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@drawable/textbox_default"
         android:text="@string/fret"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -179,7 +179,7 @@
         android:id="@+id/fret2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@drawable/textbox_default"
         android:text="@string/fret"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -195,7 +195,7 @@
         android:id="@+id/fret3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@drawable/textbox_default"
         android:text="@string/fret"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -211,7 +211,7 @@
         android:id="@+id/fret4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@drawable/textbox_default"
         android:text="@string/fret"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -227,7 +227,7 @@
         android:id="@+id/fret5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@drawable/textbox_default"
         android:text="@string/fret"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -247,7 +247,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/textbox_default"
         android:text="@string/fret"
         android:textColor="@android:color/white"
         android:textSize="40sp"
