[Refactoring] Rename functions

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorButton"
-        android:onClick="setFingerPrint"
+        android:onClick="setProblems"
         android:text="@string/start"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorButton"
-        android:onClick="submitAnswer"
+        android:onClick="submitAnswers"
         android:text="@string/submit"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
